# karkinos

./: .editorconfig  Cargo.toml  README.md  build.rs  clippy.toml
.github/workflows/: rust-clippy.yml
crates/karkinos-cli/: Cargo.toml
crates/karkinos-cli/src/: main.rs
crates/karkinosd/: Cargo.toml
crates/qspn/: Cargo.toml
crates/qspn/src/: lib.rs
docs/: viphilama.md
karkinos-cli/: Cargo.toml
karkinosd/src/: main.rs
src/karkinos-cli/: cli.rs  main.rs
src/karkinosd/: cli.rs  interface.rs  main.rs
