[package]
name = "karkinos"
description = "netsukuku in rust"
authors = ["d0p1 <contact@d0p1.eu>"]
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2021"
keywords = ["p2p", "netsukuku", "mesh"]
build = "build.rs"

[[bin]]
name = "karkinosd"
path = "src/karkinosd/main.rs"

[[bin]]
name = "karkinos-cli"
path = "src/karkinos-cli/main.rs"

[dependencies]
clap = { version = "3.2.17", features = ["cargo"] }
dirs = "4.0.0"
log = "0.4.17"
pnet = "0.31.0"
simple_logger = "2.3.0"

[build-dependencies]
clap = { version = "3.2.17", features = ["cargo"] }
clap_complete = "3.2.4"
dirs = "4.0.0"
