[package]
name = "karkinos-cli"
description = "interact with karkinosd from command line"
authors = ["d0p1 <contact@d0p1.eu>"]
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2021"
keywords = ["p2p", "netsukuku", "mesh"]

[dependencies]
clap = { version = "4.0.10", features = ["derive"] }
jsonrpsee-http-client = "0.15.1"
